Fav icon commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="_css/css.css">
+	<link rel="shortcut icon" type="image/x-icon" href="_img/lis.jpg" />
 <title>Sorteio de &aacute;sanas</title>
 </head>
 <body>
